Updated Team Section

--- a/src/index.html
+++ b/src/index.html
@@ -390,9 +390,9 @@
             <img
               src="./assets/content/images/customers/customer sirush.jpg"
               alt="Customer Face"
-              class="testimonial-img"
+              class="testimonial-img margin-bot--sm"
             />
-            <p class="testimonial-text">
+            <p class="testimonial-text margin-bot--sm">
               Professional staff, caring attitude. You are doing very important
               work to improve the quality of life of patients. Thank you!
             </p>
@@ -402,9 +402,9 @@
             <img
               src="./assets/content/images/customers/customer Ashot.jpg"
               alt="Customer Face"
-              class="testimonial-img"
+              class="testimonial-img margin-bot--sm"
             />
-            <p class="testimonial-text">
+            <p class="testimonial-text margin-bot--sm">
               I would like to express my gratitude to the team at Khnami
               Center.They have a wonderful, caring and a professional service.
             </p>
@@ -414,9 +414,9 @@
             <img
               src="./assets/content/images/customers/customer Irina.jpg"
               alt="Customer Face"
-              class="testimonial-img"
+              class="testimonial-img margin-bot--sm"
             />
-            <p class="testimonial-text">
+            <p class="testimonial-text margin-bot--sm">
               My immense gratitude to the entire staff of the Khnami Center for
               your work and professionalism. Thanks to you, I have returned to
               normal life.
@@ -427,9 +427,9 @@
             <img
               src="./assets/content/images/customers/customer Anahit.jpg"
               alt="Customer Face"
-              class="testimonial-img"
+              class="testimonial-img margin-bot--sm"
             />
-            <p class="testimonial-text">
+            <p class="testimonial-text margin-bot--sm">
               Thank you very much for your caring attitude and professional
               approach! A special thanks to the director Mrs. Dianna for her
               personal attitude.
@@ -439,30 +439,129 @@
         </div>
       </section>
       <!-- TEAM -->
-      <section class="section-team padding--section" id="section_team">
+      <section class="section-team padding--section-sm" id="section_team">
         <!-- team headline -->
         <div class="container team-headline padding-bot-lg1">
           <h2 class="heading-secondary">Our team</h2>
         </div>
+        <!-- team members -->
         <div class="container grid--team">
-          <div class="team-member-box">
-            <img
-              src="./assets/content/images/team/1BeglaryanD.jpg"
-              alt="Team Members: Head Of The Center"
-              class="team-member-img"
-            />
-            <p class="team-member-name">Diana Beglaryan</p>
-            <p class="team-member-title">Head of the center</p>
+          <div class="grid--team-row grid--team-row-padded grid--3-cols">
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/1BeglaryanD.jpg"
+                  alt="Team Members: Head Of The Center"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Beglaryan D.</p>
+              <p class="team-member-title">Head of the center</p>
+            </div>
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/7DemirchyanE.jpg"
+                  alt="Team Members: Oncologist"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Demirchyan E.</p>
+              <p class="team-member-title">Oncologist</p>
+            </div>
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/4MazmanyanV.jpg"
+                  alt="Team Members: Family Doctor"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Mazmanyan V.</p>
+              <p class="team-member-title">Family Doctor</p>
+            </div>
           </div>
-          <div class="member-box">2</div>
-          <div class="member-box">3</div>
-          <div class="member-box">4</div>
-          <div class="member-box">5</div>
-          <div class="member-box">6</div>
-          <div class="member-box">7</div>
-          <div class="member-box">8</div>
-          <div class="member-box">9</div>
-          <div class="member-box">10</div>
+          <div class="grid--team-row grid--4-cols">
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/8NersisyanS.jpg"
+                  alt="Team Members: Senior Nurse"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Nersisyan S.</p>
+              <p class="team-member-title">Senior Nurse</p>
+            </div>
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/3SuqiasyanK.jpg"
+                  alt="Team Members: Nurse"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Suqiasyan K.</p>
+              <p class="team-member-title">Nurse</p>
+            </div>
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/9Sirekyan.jpg"
+                  alt="Team Members: Nurse"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Sirekyan G.</p>
+              <p class="team-member-title">Nurse</p>
+            </div>
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/6QocharyanS.jpg"
+                  alt="Team Members: Nurse"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Qocharyan S.</p>
+              <p class="team-member-title">Nurse</p>
+            </div>
+          </div>
+          <div class="grid--team-row grid--team-row-padded grid--3-cols">
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/5GarakeshishyanS.jpg"
+                  alt="Team Members: Nurse"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Garakeshishyan S.</p>
+              <p class="team-member-title">Nurse</p>
+            </div>
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/10Karapetyan.jpg"
+                  alt="Team Members: Nurse"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Karapetyan E.</p>
+              <p class="team-member-title">Nurse</p>
+            </div>
+            <div class="team-member-box">
+              <div class="img-box margin-bot--sm">
+                <img
+                  src="./assets/content/images/team/2TantushyanR.jpg"
+                  alt="Team Members: Caregiver"
+                  class="team-member-img shadow--dark"
+                />
+              </div>
+              <p class="team-member-name">Tantushyan R.</p>
+              <p class="team-member-title">Caregiver</p>
+            </div>
+          </div>
         </div>
       </section>
       <!-- CTA -->
