Fixed Padding Issue

--- a/src/index.html
+++ b/src/index.html
@@ -439,7 +439,7 @@
         </div>
       </section>
       <!-- TEAM -->
-      <section class="section-team padding--section-sm" id="section_team">
+      <section class="section-team padding--section" id="section_team">
         <!-- team headline -->
         <div class="container team-headline padding-bot-lg1">
           <h2 class="heading-secondary">Our team</h2>
