Started Adding Lang Select

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,23 @@
           class="btn header-link header-link--contact margin-bot--md"
           >Contact</a
         >
+        <!-- language select -->
+        <div class="lang-select-container">
+          <div class="header-lang-select-box flex--centered margin-bot--md">
+            <p class="lang-select-text">EN</p>
+            <ion-icon name="chevron-down-outline"></ion-icon>
+          </div>
+          <div class="header-lang-select-dropdown">
+            <div class="header-language flex--centered">
+              <img
+                src="./assets/content/images/util/UKflag.svg"
+                alt="UK flag"
+                class="flag-img"
+              />
+              <p class="language-name">English</p>
+            </div>
+          </div>
+        </div>
       </nav>
       <!-- header contact links -->
       <div class="header-contact">
