--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="./assets/CSS/general.css" />
     <link rel="stylesheet" href="./assets/CSS/style.css" />
     <link rel="stylesheet" href="./assets/CSS/queries.css" />
+    <link rel="stylesheet" href="./assets/CSS/translation.css" />
     <!-- Google Fonts Aleo + Merriweather -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -184,7 +185,7 @@
     <main>
       <!-- HERO SECTION -->
       <section class="section-hero padding--section">
-        <div class="hero container grid grid--2-cols centered--vertically">
+        <div class="container hero grid grid--2-cols centered--vertically">
           <!-- hero text -->
           <div class="hero-text-box grid">
             <!-- hero headline -->
